@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.6.11
 Date: 11/2/26
+  Bugfixes:
+    - Fixed biter ramming crash.
 ---------------------------------------------------------------------------------------------------
 Version: 1.6.10
 Date: 11/2/26
